--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,7 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+These individuals contributed to furthering the prohect for the alx sql group assignment 
+Dorah Rotich <rotichkurgat@gmail.com>
+Abel Misiocha <wells.mail@gmail.com>
